# mfcadapter

./: CMakeLists.txt  ProjectHome.md
Debug/: MFCAdapter.exe.stackdump  objects.mk
Debug/src/: CString.d  CTimeSpan.d
Debug/src/test/: CListTest.d  CStringTest.d  Main.d  subdir.mk
src/: CList.cpp  CList.h  CMakeLists.txt  CObject.cpp  CObject.h  CString.h  CTimeSpan.cpp  MFCAdapter.h
src/test/: CStringTest.cpp  CStringTest.h  CTimeSpanTest.h  CTimeTest.cpp  CTimeTest.h
trunk/: .cproject  .project  CMakeLists.txt  README
trunk/Debug/: makefile  sources.mk
trunk/Debug/src/: CList.d  CObject.d  CTime.d  subdir.mk
trunk/Debug/src/test/: CTimeSpanTest.d  CTimeTest.d
trunk/src/: CMakeLists.txt  CString.cpp  CTime.cpp  CTime.h  CTimeSpan.h  Types.h
trunk/src/test/: CListTest.cpp  CListTest.h  CMakeLists.txt  CTimeSpanTest.cpp  Main.cpp
wiki/: README_0_1.wiki
